Addition Of Button

--- a/Second Assignment/index.html
+++ b/Second Assignment/index.html
@@ -5,25 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
-    <center>
-        <style>
-            table {
-                max-width: 500px;
-            }
-        </style>
-        <style>
-            table,
-            tr,
-            th,
-            td {
-                border: 2px solid burlywood;
-            }
-        </style>
+    <style>
+        body {
+            text-align: center;
+        }
+
+        table {
+            max-width: 500px;
+            margin-left: 370px;
+        }
+
+        table,
+        tr,
+        th,
+        td {
+            border: 2px solid burlywood;
+        }
+        a{
+            text-decoration: none;
+        }
+        button{
+            padding: 10px 15px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-        <strong>Lan's timetable</strong>
+        <h1>
+            Lan's Timetable
+        </h1>
     </header>
     <table>
         <tr>
@@ -78,16 +89,22 @@
             <td colspan="3">Tutorial for MAM200</td>
             <td colspan="4">Free</td>
         </tr>
-<tr>
-    <td>Research</td>
-    <td>Friday</td>
-    <td colspan="3">Research</td>
-    <td></td>
-    <td colspan="7">Research</td>
-</tr>
+        <tr>
+            <td>Research</td>
+            <td>Friday</td>
+            <td colspan="3">Research</td>
+            <td></td>
+            <td colspan="7">Research</td>
+        </tr>
     </table>
+<br>
+<hr>
+<hr>
+
+    <div>
+        <button><a href="./Signup Form.html">Registration Form</a></button>
+    </div>
 
 </body>
-</center>
 
 </html>
