--- a/First Assignment/index.html
+++ b/First Assignment/index.html
@@ -5,46 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <style>
+    <!-- <style>
         body {
             text-align: center;
         }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="./Style.css">
 </head>
 
 <body>
-    <div>
-        <img src="./pics/Heading.jpg" alt="loading" width="30%">
-    </div>
-    <hr>
+    <nav>
+        <div>
+            <label class="logo">Umar's Cuisine</label>
+
+            <ul>
+                <li><a class="active" href="./index.html">Home</a>&nbsp; </li>
+                <li><a href="./About.html">About</a>&nbsp; </li>
+                <li><a href="./Menu.html">Menu</a> &nbsp; </li>
+                <li><a href="./Timing.html">Timings</a>&nbsp; </li>
+                <li><a href="./Contact.html">Contact Us</a>&nbsp; </li>
+            </ul>
+        </div>
+    </nav>
     <br>
-    <div>
-        <a href="./index.html">Home</a>&nbsp;
-        <a href="./About.html">About</a>&nbsp;
-        <a href="./Menu.html">Menu</a> &nbsp;
-        <a href="./Timing.html">Timings</a>&nbsp;
-        <a href="./Contact.html">Contact Us</a>&nbsp;
-    </div>
-    <br>
-    <hr>
     <div>
         <br>
-        <strong>
-            We Sever delicious fast food item
+        <strong id="Sever">
+            We Serve delicious fast food item.
         </strong>
+        <br>
+        <br>
     </div>
     <img src="./pics/burger.jpg" alt="" width="30%">
     <img src="./pics/pizza.jpg" alt="" width="30%">
     <img src="./pics/food.jpg" alt="" width="30%">
-<br>
-<br>
-<button><a href="./Menu.html">Let see our menu</a></button>
-<br>
-<hr>
-<p>
-    Copyright &copy; 2021 by umar's cuisine
+    <br>
 
-</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Corporis iste debitis eius culpa numquam veniam minima quod laboriosam aliquid architecto!</p>
+
+
+    <br>
+    <button id="see"><a href="./Menu.html">Let see our menu</a></button>
+    <br>
+    <br>
+    <br>
+
+    <p>
+        Copyright &copy; 2021 by umar's cuisine
+
+    </p>
 </body>
 
 
